Patch theme and wizard
Patch the jekyll theme config and remove capital on Wizard.

--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,4 +1,4 @@
-theme: time-machine
+theme: jekyll-theme-time-machine
 github:
   is_project_page: false
   repository_url: https://prezschaefer.github.io/cicici
